Adding remark42 as commentig platform

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-TRAEFIK_BASIC_AUTH_PASSWD=admin:$$apr1$$3bVLXoBF$$7rHNxHT2cLZLOr57lHBOv1
+TRAEFIK_BASIC_AUTH_PASSWD=[your_htpasswd_here]
 TRAEFIK_URL=monitor.yourdomain.com
 FOUNDRY_URL=foundry.yourdomain.com
 MATOMO_URL=matomo.yourdomain.com
+REMARK42_URL=remark42.yourdomain.com
