--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 TRAEFIK_BASIC_AUTH_PASSWD=[your_htpasswd_here]
 TRAEFIK_URL=monitor.yourdomain.com
-FOUNDRY_URL=foundry.yourdomain.com
 MATOMO_URL=matomo.yourdomain.com
 REMARK42_URL=remark42.yourdomain.com
+MYWEBSITE_URL=myweb.yourdomain.com
