Avoid CORS issues with remark42

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -124,6 +124,7 @@ services:
       - "traefik.http.routers.remark42-secure.service=remark42"
       - "traefik.http.services.remark42.loadbalancer.server.port=80"
 
+
   # MyWebsite
   mywebsite:
     depends_on:
@@ -151,6 +152,7 @@ services:
       - "traefik.http.routers.mywebsite-secure.tls.certresolver=http"
       - "traefik.http.routers.mywebsite-secure.service=mywebsite"
       - "traefik.http.services.mywebsite.loadbalancer.server.port=80"
+      - "traefik.http.middlewares.remark42-headers.headers.accesscontrolalloworiginlist=*"
 
 networks:
   frontend:
