--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
   traefik:
     depends_on:
       - docker-proxy
-    image: traefik:v2.0
+    image: traefik
     container_name: traefik
     restart: unless-stopped
     security_opt:
